<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
    >



    <com.example.brett.sunshine.views.LocationEditTextPreference
            android:title="@string/pref_location_title"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            app:minLength="3"
            android:inputType="text"
            android:singleLine="true"            />


    <ListPreference
            android:title="@string/pref_units_title"
            android:key="@string/pref_units_key"
            android:defaultValue="@string/pref_units_default"
            android:entries="@array/units_array"
            android:entryValues="@array/units_array_values"

            />


    <ListPreference
        android:title="@string/pref_art_pack_label"
        android:key="@string/pref_art_pack_key"
        android:defaultValue="@string/pref_art_pack_sunshine"
        android:entryValues="@array/pref_art_pack_values"
        android:entries="@array/pref_art_pack_options" />

    <CheckBoxPreference
        android:title="@string/notification_preference_title"
        android:key="@string/notification_preference_key"
        android:defaultValue="true" />
</PreferenceScreen>